Update image source for trombone in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <header>
       <div>
-        <img src="./Pics/trombone.png">
+        <img src="./docs/trombone.png">
         <p>Original Trombones</p>
       </div>
       <div>
